force-app/main/default/objects/AI_Usage_Log__c/AI_Usage_Log__c.object-meta.xml
<CustomObject>
    <description>Tracks AI API usage for cost monitoring</description>
    <label>AI Usage Log</label>
    <nameField>
        <displayFormat>AILOG-{000000}</displayFormat>
        <label>AI Usage Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Usage Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>