force-app/main/default/objects/AI_Usage_Log__c/fields/Chat_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Chat_Interaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related session</description>
    <label>Chat Interaction</label>
    <referenceTo>Chat_Interaction__c</referenceTo>
    <relationshipLabel>AI Usage Logs</relationshipLabel>
    <relationshipName>AI_Usage_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>