force-app/main/default/objects/AI_Usage_Log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related candidate</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AI Usage Logs</relationshipLabel>
    <relationshipName>AI_Usage_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>