force-app/main/default/objects/AI_Usage_Log__c/fields/Estimated_Cost_USD__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_USD__c</fullName>
    <description>Calculated cost</description>
    <label>Estimated Cost USD</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>