force-app/main/default/objects/AI_Usage_Log__c/fields/Input_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Input_Tokens__c</fullName>
    <description>Tokens sent</description>
    <label>Input Tokens</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>