force-app/main/default/objects/AI_Usage_Log__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Model used</description>
    <label>Model</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>