force-app/main/default/objects/AI_Usage_Log__c/fields/Output_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Output_Tokens__c</fullName>
    <description>Tokens received</description>
    <label>Output Tokens</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>