force-app/main/default/objects/AI_Usage_Log__c/fields/Prompt_Template__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Template__c</fullName>
    <description>Which template was used</description>
    <label>Prompt Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>