force-app/main/default/objects/AI_Usage_Log__c/fields/Response_Time_ms__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_ms__c</fullName>
    <description>API response time</description>
    <label>Response Time ms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>