force-app/main/default/objects/AI_Usage_Log__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If call succeeded</description>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>