force-app/main/default/objects/AI_Usage_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>When API was called</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>