force-app/main/default/objects/AI_Usage_Log__c/fields/Total_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Total_Tokens__c</fullName>
    <description>Input + Output</description>
    <formula>Input_Tokens__c + Output_Tokens__c</formula>
    <label>Total Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>