force-app/main/default/objects/AI_Usage_Log__c/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <description>What the call was for</description>
    <label>Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chat Response</fullName>
            </value>
            <value>
                <fullName>Intent Extraction</fullName>
            </value>
            <value>
                <fullName>Pathway Generation</fullName>
            </value>
            <value>
                <fullName>Sentiment Analysis</fullName>
            </value>
            <value>
                <fullName>Summary Generation</fullName>
            </value>
            <value>
                <fullName>Skill Matching</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>